# learning-cmake

./: CMakeLists.txt  README.md  config.h.in
include/: car.h
src/: car.cpp  main.cpp
